<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="pl.arturborowy.vvmpim.form.address.FormAddressViewModel" />

        <variable
            name="uiEventHandler"
            type="pl.arturborowy.vvmpim.form.address.FormAddressUiEventHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_address__hint__city"
            android:text="@{viewModel.city}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_address__hint__postal_code"
            android:text="@{viewModel.postalCode}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_address__hint__street"
            android:text="@{viewModel.street}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_address__hint__building_no"
            android:text="@{viewModel.buildingNo}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_address__hint__apartment_no"
            android:text="@{viewModel.apartmentNo}" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> uiEventHandler.onNextBtnClick()}"
            android:text="@string/form__btn__next" />

    </LinearLayout>

</layout>