<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="pl.arturborowy.vvmpim.formname.FormNameViewModel" />

        <variable
            name="uiEventHandler"
            type="pl.arturborowy.vvmpim.formname.FormNameUiEventHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_name__hint__first_name"
            android:text="@{viewModel.firstName}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_name__hint__middle_name"
            android:text="@{viewModel.middleName}" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/form_name__hint__last_name"
            android:text="@{viewModel.lastName}" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> uiEventHandler.onNextBtnClick()}"
            android:text="@string/form__btn__next" />

    </LinearLayout>

</layout>